--- a/web/5.html
+++ b/web/5.html
@@ -5,7 +5,8 @@
         <a href="portfolio.html"><img src="img\back.png" height="20" width="20"><font color="black" size="5"> <i>BACK</i></font></a>
 
 
-    <center><a href="6.html"><font color="black" size=5>Leave at once.</font></a></center>
+    <center><a href="6.html"><font color="black" size=5>Leave.</font></a></center>
 
     </body>
+
 </html>
