--- a/business/about.html
+++ b/business/about.html
@@ -4,9 +4,20 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body bgcolor="silver">
-        <a id="back" href="home.html">
-            <img src="img/back.png" width="15px" height="12px"> Back
+        <a id="back" href="home.html" target="frame.html">
+            <img src="img/back.png" width="15px" height="12px"> Back to Home
         </a>
         <div id="welcome">Welcome, Beta Tester!</div>
+
+        <div class="head"><center>About Our Business: Buddy</center></div>
+        <center><div class="text">
+            Buddy is an AR companion that provides users with a virtual friend to interact with in augmented reality. Our mission is to combat loneliness and foster meaningful connections through our technology.
+            <br><br>
+            Buddy not only provides you an AR companion, but alsouses advanced technology to enhance your life through the use of AR tech! This can include watching Youtube while controlling the screen size while being able to see your surroundings!
+            <br><br>
+            We hope that our Buddy can color your day and be able to enhance your life! May it be seeing your heart rate while working out, calling, or even for recording!</div></center>
+        <br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="text">
+        Please note that Buddy is currently in its beta testing phase. As such, the images used are purely <b>CONCEPTUAL</b>, was taken from the internet, and does not intend to Plagiarize. We appreciate your understanding and patience as we work to improve the app.</div>
     </body>
 </html>
